--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
   "configurations": [
     {
-      "name": "C/C++: g++ 활성 파일 빌드 및 디버그",
+      "name": "C/C++: g++ 활성 파일 빌드 및 디버그 (기본)",
       "type": "cppdbg",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
