--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,18 +20,16 @@
       "problemMatcher": [
         "$gcc"
       ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
+      "group": "build",
       "detail": "컴파일러: /usr/bin/clang++"
     },
     {
       "type": "cppbuild",
       "label": "C/C++: g++ 활성 파일 빌드",
-      "command": "/usr/bin/g++",
+      "command": "/opt/homebrew/bin/g++-15",
       "args": [
         "-fdiagnostics-color=always",
+        "-std=c++17",
         "-g",
         "${file}",
         "-o",
@@ -43,8 +41,11 @@
       "problemMatcher": [
         "$gcc"
       ],
-      "group": "build",
-      "detail": "디버거에서 생성된 작업입니다."
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "detail": "GCC 15 컴파일러"
     }
   ]
 }
